added problem 2 optimised solution

--- a/project-euler/project_euler_set1.ipynb
+++ b/project-euler/project_euler_set1.ipynb
@@ -6,6 +6,7 @@
       "name": "project_euler_set1",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "machine_shape": "hm",
       "include_colab_link": true
     },
@@ -33,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "2) Even Fibonacci numbers"
+        "## 2. Even Fibonacci Numbers"
       ]
     },
     {
@@ -43,9 +44,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 87
         },
-        "outputId": "ff99c3c8-e253-48a9-e3b0-0264078c809a"
+        "outputId": "9f60a835-efe1-495e-bb45-cd3b96f4b6e9"
       },
       "source": [
         "import time\n",
@@ -79,41 +80,50 @@
         "    Generation of seq with upper limit\n",
         "    \"\"\"\n",
         "    seq = list()\n",
-        "    seq.append(1)\n",
-        "    seq.append(2)\n",
+        "    seq.append(a)\n",
+        "    seq.append(b)\n",
         "    c = 0\n",
         "    while(c<limit):\n",
         "        c = a+b\n",
         "        a = b\n",
         "        b = c\n",
         "        seq.append(c)\n",
-        "    return seq       \n",
+        "    return seq    \n",
+        "\n",
+        "def fib_lim_even(a,b,limit):\n",
+        "    \"\"\"\n",
+        "    Optimised Solution\n",
+        "    \"\"\"\n",
+        "    seq = list()\n",
+        "    seq.append(b)\n",
+        "    c = 0\n",
+        "    while (c<limit):\n",
+        "        c = a+b\n",
+        "        a = b+c\n",
+        "        b = c+a\n",
+        "        seq.append(b)\n",
+        "    return sum(seq[:-1])\n",
         "\n",
         "start = time.process_time()\n",
         "fib_seq = fib_lim(1,2,4e6)\n",
+        "print(sum([l if l%2==0 else 0 for l in fib_seq[:-1]]))\n",
         "print(\"Time Taken: \",time.process_time() - start)\n",
-        "sum([l if l%2==0 else 0 for l in fib_seq[:-1]])"
+        "\n",
+        "start = time.process_time()\n",
+        "print(fib_lim_even(1,2,4e6))\n",
+        "print(\"Time Taken: \",time.process_time() - start)"
       ],
-      "execution_count": 29,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Time Taken:  4.3525000000155245e-05\n"
+            "4613732\n",
+            "Time Taken:  0.0003583960000002051\n",
+            "4613732\n",
+            "Time Taken:  9.079599999983756e-05\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4613732"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
         }
       ]
     },
@@ -124,44 +134,7 @@
         "colab_type": "text"
       },
       "source": [
-        "3) Largest prime factor"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PrjrkkKsun5k",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "b03b9ad0-984b-4555-8f8d-0124524606a7"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "9.740299999982938e-05\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4613732"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
-        }
+        "## 3. Largest Prime Factor"
       ]
     },
     {
@@ -172,7 +145,8 @@
         "colab": {}
       },
       "source": [
-        ""
+        "\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
