Solved finding largest prime factor

--- a/project-euler/project_euler_set1.ipynb
+++ b/project-euler/project_euler_set1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "project_euler_set1",
-      "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
@@ -42,11 +41,11 @@
       "metadata": {
         "id": "Q0lZ8b7HpZ0r",
         "colab_type": "code",
+        "outputId": "1782c548-efe8-4f74-c1f9-d2e361666dd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
-        },
-        "outputId": "9f60a835-efe1-495e-bb45-cd3b96f4b6e9"
+          "height": 86
+        }
       },
       "source": [
         "import time\n",
@@ -113,15 +112,15 @@
         "print(fib_lim_even(1,2,4e6))\n",
         "print(\"Time Taken: \",time.process_time() - start)"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "4613732\n",
-            "Time Taken:  0.0003583960000002051\n",
+            "Time Taken:  0.0014045069999997217\n",
             "4613732\n",
-            "Time Taken:  9.079599999983756e-05\n"
+            "Time Taken:  0.0005365649999999889\n"
           ],
           "name": "stdout"
         }
@@ -140,13 +139,86 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "NCctieHGtX-5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cac96b74-76b5-47c1-889d-f60c251200c8"
+      },
+      "source": [
+        "4//2"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "VbwWZ3sq6v3t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "2dc6917e-8d76-4537-cb0b-f7a831f9356b"
+      },
+      "source": [
+        "import math \n",
+        "m = 600851475143\n",
+        "\n",
+        "def find_factors(number):\n",
+        "    n=1\n",
+        "    factors = list()\n",
+        "    while n<=math.sqrt(number):\n",
+        "        if number%n==0:\n",
+        "            factors.append(n)\n",
+        "            factors.append(number//n)\n",
+        "        n+=1\n",
+        "    return(sorted(factors, reverse=True))\n",
+        "\n",
+        "start = time.process_time()\n",
+        "for factor in find_factors(m):\n",
+        "    if len(find_factors(factor))==2:\n",
+        "        print(factor)\n",
+        "        break\n",
+        "print(\"Time Taken: \",time.process_time() - start)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6857\n",
+            "Time Taken:  0.5050369640000003\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fhOJ0yWUs8IH",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "\n",
-        "\n"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
