Added even-odd filtering

--- a/project-euler/project_euler_set1.ipynb
+++ b/project-euler/project_euler_set1.ipynb
@@ -6,6 +6,7 @@
       "name": "project_euler_set1",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
     },
@@ -27,6 +28,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q0lZ8b7HpZ0r",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import time"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "jX70z203qcYi",
@@ -39,16 +53,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q0lZ8b7HpZ0r",
+        "id": "cMmAnPxILkst",
         "colab_type": "code",
-        "outputId": "1782c548-efe8-4f74-c1f9-d2e361666dd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "outputId": "3abdc7df-ae84-4d5c-f509-318f6423787c"
       },
       "source": [
-        "import time\n",
         "\n",
         "def fib_recur_n(n):\n",
         "    \"\"\"\n",
@@ -112,15 +125,15 @@
         "print(fib_lim_even(1,2,4e6))\n",
         "print(\"Time Taken: \",time.process_time() - start)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "4613732\n",
-            "Time Taken:  0.0014045069999997217\n",
+            "Time Taken:  0.0011318540000000432\n",
             "4613732\n",
-            "Time Taken:  0.0005365649999999889\n"
+            "Time Taken:  0.0006666440000000495\n"
           ],
           "name": "stdout"
         }
@@ -139,49 +152,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NCctieHGtX-5",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "cac96b74-76b5-47c1-889d-f60c251200c8"
-      },
-      "source": [
-        "4//2"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "VbwWZ3sq6v3t",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 86
         },
-        "outputId": "2dc6917e-8d76-4537-cb0b-f7a831f9356b"
+        "outputId": "706948e4-fc92-4c5d-b770-7d961cce8336"
       },
       "source": [
         "import math \n",
         "m = 600851475143\n",
         "\n",
         "def find_factors(number):\n",
+        "    \"\"\"\n",
+        "    Using the sieve method.\n",
+        "    \"\"\"\n",
         "    n=1\n",
         "    factors = list()\n",
         "    while n<=math.sqrt(number):\n",
@@ -191,23 +177,47 @@
         "        n+=1\n",
         "    return(sorted(factors, reverse=True))\n",
         "\n",
-        "start = time.process_time()\n",
         "for factor in find_factors(m):\n",
+        "    if len(find_factors(factor))==2:\n",
+        "        print(factor)\n",
+        "        break\n",
+        "print(\"Time Taken: \",time.process_time() - start)\n",
+        "\n",
+        "\"\"\"\n",
+        "Filter out even numbers and then \n",
+        "check for the largest prime\n",
+        "\"\"\"\n",
+        "start = time.process_time()\n",
+        "all_factors = find_factors(m)\n",
+        "odd_factors = list(filter(lambda x:x%2!=0,all_factors))\n",
+        "for factor in odd_factors:\n",
         "    if len(find_factors(factor))==2:\n",
         "        print(factor)\n",
         "        break\n",
         "print(\"Time Taken: \",time.process_time() - start)"
       ],
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "6857\n",
-            "Time Taken:  0.5050369640000003\n"
+            "Time Taken:  0.5288252500000001\n",
+            "6857\n",
+            "Time Taken:  0.5176304360000001\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0dH9HuVzLPWf",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Largest palindrome product"
       ]
     },
     {
